2004-10-02  Nicolas S. Dade  <ndade@nsd.dyndns.org>
  
	* pwsafe: added -G/--ignore with default value {klipper,
	  xclipboard}
	* pwsafe: added --exportdb
	  pwsafe: added --dbversion and support for pwsafe version 2.0
	  databases

2004-03-01  Nicolas S. Dade  <ndade@nsd.dyndns.org>
    
        * pwsafe: first try case sensative perfect match.
        * pwsafe: release 0.1.6

2004-02-27  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: you can now end the X selection
          paste pressing any key. You can still, as
          always, end it by selecting something.
        * pwsafe: fixed up build on MacOSX (sysconf(_SC_PAGEZIZE)
          doesn't exist) and freebsd (readline.h declares
          most things correctly, but not the callbacks)

2004-02-25  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: added pwsafe.1.in
        * pwsafe: fixed (harmless) "yes" "yes" output
          from configure.
        * pwsafe: print out character length of suggested
          random password (useful for sites that have
          a length limit)
        * pwsafe: when suggested random password entropy
          gets under 64 bits decrement by 8 bits rather
          than the usual 32 bits.

2004-02-20  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: added a cheap substitute for getopt_long
          to help out OSes that don't have it (solaris). 
          You can also use it by specifying --without-getopt_long
          if you somehow don't like the better gnu one.
        * pwsafe: fixed getyn(string&) returning true all 
          the time, thus not allowing you to not use the 
          default username. getyn(const char*) wasn't
          broken so most YN questions were fine.
        * pwsafe: fixed typo in question "user default
          username?"
        * pwsafe: release 0.1.5

2004-02-17  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: added configure test for readline.h's